# imagetools

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  README.md  imagetools.py  main.py  pyproject.toml  requirements.txt  test_filter.py
.github/workflows/: codecov.yml  codeql-analysis.yml  compile-nuitka.yml  main.yml
